kube/labs/3-imperative_and_stitched/vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: default
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - '*'
    options:
      cors:
        allowCredentials: true
        allowHeaders:
        - content-type
        allowMethods:
        - POST
        allowOriginRegex:
        - '/*'
    routes:
    - graphqlApiRef:
        name: stitched-gql
        namespace: gloo-system
      matchers:
      - prefix: /graphql
